--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
         "jgrossi/corcel": "^6.0",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7",
-        "tymon/jwt-auth": "*"
+        "laravel/tinker": "^2.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
